--- a/data_generation/gta_config.ini
+++ b/data_generation/gta_config.ini
@@ -10,12 +10,9 @@ timeIntervals=8
 TotalFrames=400
 FirstEventFrame=150
 SecondEventFrame=200
-ThirdEventFrame = 300
-;LowerGroupDiv=100
+ThirdEventFrame=300
 LowerGroupDiv=50
-;LowerGroupSizeDiv=10
 LowerGroupSizeDiv=100
-;MinGroupSize=15
 MinGroupSize=2
 MaxPeds=100
 Width=1920
@@ -28,15 +25,13 @@ PhoneProbability=0.2
 
 [listOfInts]
 ;Fps=5,10,15,25,30,60
-Fps=30, 30
+Fps=30,30
 
 [listOfStrings]
-;Weather=Clear,Clouds,Overcast,ExtraSunny,Smog,Snowing
-Weathe=ExtraSunny,ExtraSunny
-;Actions=Knife, Knife
-;Actions=Shoot,Shoot
-Actions=Normal,Normal
-;Raining,ThunderStorm
+Weather=Clear,Clouds,Overcast,Raining,ThunderStorm,ExtraSunny,Smog,Snowing
+Actions=Shoot,Shoot
+;Actions=Knife,Knife
+;Actions=Normal,Normal
 
 [timestamps]
 StartTime=00:00:00
